--- a/app/views/custom/passwordChange.scala.html
+++ b/app/views/custom/passwordChange.scala.html
@@ -5,7 +5,7 @@
 @implicitFieldConstructor = @{ FieldConstructor(securesocial.views.html.inputFieldConstructor.f) }
 
 @securesocial.views.html.main( Messages("securesocial.passwordChange.title") ) {
-    <div class="container">
+    <div class="container maincontent-container">
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header">
