--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -125,7 +125,7 @@
                 @if(reviewBoxes.nonEmpty){
                 <!-- Reviews -->
                 <div class="row">
-                        <h2 class="page-header">@Messages("startpage.reviews.users.header")</h2>
+                        <div class="col-xs-12"><h2 class="page-header">@Messages("startpage.reviews.users.header")</h2></div>
                         @shared.reviewBox(reviewBoxes.get)
                 </div>
                 }
