--- a/app/views/custom/Registration/signUp.scala.html
+++ b/app/views/custom/Registration/signUp.scala.html
@@ -5,7 +5,7 @@
 @implicitFieldConstructor = @{ FieldConstructor(securesocial.views.html.inputFieldConstructor.f) }
 
 @main(Messages("securesocial.signup.title")){
-    <div class="container">
+    <div class="container maincontent-container">
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header">
