--- a/app/views/custom/login.scala.html
+++ b/app/views/custom/login.scala.html
@@ -6,7 +6,7 @@
 @import securesocial.core.providers.UsernamePasswordProvider.UsernamePassword
 
 @main(Messages("securesocial.login.title")){
-    <div class="container">
+    <div class="container maincontent-container">
         <div class="row">
             <div class="col-xs-12">
 
