--- a/app/views/custom/notAuthorized.scala.html
+++ b/app/views/custom/notAuthorized.scala.html
@@ -1,7 +1,7 @@
 @()(implicit request: RequestHeader)
 @main(Messages("securesocial.notAuthorized.title")) {
 
-    <div class="container">
+    <div class="container maincontent-container">
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header">
