--- a/app/views/file/openModalButton.scala.html
+++ b/app/views/file/openModalButton.scala.html
@@ -4,6 +4,6 @@
 
 <script>
 var btn = document.getElementById('@btnId');
-btn.onclick = function(){ openFileModal(@editMode, @if(inputSelector.isEmpty){""}else{@inputSelector}, @selectorMaxItems); }
+btn.onclick = function(){ openFileModal(@editMode, @if(inputSelector.isEmpty){""}else{document.getElementById('@inputSelector')}, @selectorMaxItems); }
 </script>
 
