--- a/app/views/recipe/addOrEdit.scala.html
+++ b/app/views/recipe/addOrEdit.scala.html
@@ -3,7 +3,7 @@
 
 @main(Messages("admin.title"), footerHtml = file.modalImages.render()){
 
-    <div class="container">
+    <div class="container maincontent-container">
         <div class="row">
             <div class="col-xs-12 col-md-9">
                 <div class="row">
