--- a/app/views/error/error.scala.html
+++ b/app/views/error/error.scala.html
@@ -3,7 +3,7 @@
 
 @main(Messages("error.title")) {
 
-    <div class="container">
+    <div class="container maincontent-container">
         <div class="row">
             <div class="col-xs-12 col-md-9">
                 <div class="page-header">
