--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -9,7 +9,7 @@
 
 @main(Messages("profile.create.title"), footerHtml = file.modalImages.render()){
 
-    <div class="container">
+    <div class="container maincontent-container">
         <div class="row">
             <div class="col-xs-12">
 
