--- a/app/views/profile/tags.scala.html
+++ b/app/views/profile/tags.scala.html
@@ -4,7 +4,7 @@
 
 @main(Messages("profile.create.title")){
 
-    <div class="container">
+    <div class="container maincontent-container">
         <div class="row">
             <div class="col-xs-12">
 
