Delete Recipe function added Corrections to menu overlay when scrolling down, now always a little seethru (80%) Added some white padding to the left and right of all pages

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -468,7 +468,6 @@ input[type="reset"]:hover
 
 
 
-
 // Host levels / grade / rating
 .host-level-icon
 {
@@ -1359,7 +1358,12 @@ input[type="reset"]:hover
   padding-bottom:60px;
   margin-bottom:30px;
 }
-
+.maincontent-container .row,
+.host-container .row
+{
+  margin-left:-10px;
+  margin-right:-10px;
+}
 
 
 
