--- a/app/views/recipe/addOrEdit.scala.html
+++ b/app/views/recipe/addOrEdit.scala.html
@@ -1,13 +1,7 @@
 @(recipeForm: Form[models.viewmodels.RecipeForm], editingRecipe: Option[models.Recipe] = None, extraValues: models.viewmodels.EditRecipeExtraValues)(implicit flash: Flash = Flash.emptyCookie, request: RequestHeader)
 @import helper.twitterBootstrap._
 
-@script = {
-    <script>
-    //bootbox.confirm("Are you sure?", function(result) { alert('go ahead');});
-    </script>
-}
-
-@main(Messages("admin.title"), footerHtml = file.modalImages.render(),footerScripts = script){
+@main(Messages("admin.title"), footerHtml = file.modalImages.render()){
 
     <div class="container maincontent-container">
         <div class="row">
