--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -42,6 +42,7 @@
                         <li><a data-toggle="tab" href="#profile-tab-personal-info" title="@Messages("profile.create.tabs.personal-information.title")">@Messages("profile.create.tabs.personal-information.name")</a></li>
                         <li><a data-toggle="tab" href="#profile-tab-host" title="@Messages("profile.create.tabs.host.title")">@Messages("profile.create.tabs.host.name")</a></li>
                         <li><a data-toggle="tab" href="#profile-tab-media" title="@Messages("profile.create.tabs.media.title")">@Messages("profile.create.tabs.media.name")</a></li>
+                        <li class="disabled"><a data-toggle="tab" href="#profile-tab-other" title="@Messages("profile.create.tabs.other.title")">@Messages("profile.create.tabs.other.name")</a></li>
                     </ul>
                 </nav>
             </div>
@@ -308,6 +309,15 @@
                         <hr>
                     </div>
                 </div>
+
+                <div class="tab-pane tab-hdc fade" id="profile-tab-other">
+                    <div class="col-xs-12">
+                        <h3 class="lead">@Messages("profile.create.header.other")</h3>
+
+                        <hr>
+                    </div>
+                </div>
+
             </div>
 
             <div class="col-xs-12 text-center margin-top">
