--- a/app/views/blogg/bloggBox.scala.html
+++ b/app/views/blogg/bloggBox.scala.html
@@ -9,16 +9,16 @@ var resultsPrevBtnBlogg = "#resultPrevBlogg";
 var resultsTotalBlogg = "#resultsTotalBlogg";
 
 
-function boxTemplate(value){
+function blogTemplate(value){
 var l = "";
-l = l + "<div class='col-xs-12 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0 col-recipe-boxes'><a href='" + "/blogg/view/" + value.objectId + "' class='link-recipe-panel'>";
-l = l + "<div class='thumbnail panel-recipe hover-green-dropshadow'>";
-l = l + "<div class='body'>";
-l = l + "<div class='crop-height'><img src='" + value.mainImage + "' class='img-responsive'></div>";
+l = l + "<div class='row'><div class='col-xs-12'>";
+l = l + "<a href='" + "/blogg/view/" + value.objectId + "' class='link-recipe-panel'>";
 l = l + "<h2>" + value.title + "</h2>";
-l = l + "<div class='preamble'>" + value.text + "</div>";
+l = l + "</a>";
+l = l + "<div><img src='" + value.mainImage + "' class='img-responsive'></div>";
+l = l + "<div>" + value.text + "</div>";
 l = l + "</div></div>";
-l = l + "</a></div>";
+l = l + "</div></div>";
 
 return l;
 }
@@ -39,7 +39,7 @@ totalPages = value.totalPages;
 }
 
 nrOfItems = nrOfItems + 1;
-myArr.push(boxTemplate(value));
+myArr.push(blogTemplate(value));
 });
 
 if(nrOfItems > 0) {
@@ -74,7 +74,7 @@ $(resultsPrevBtnBlogg).off("click").on("click", function(){getBloggBoxesAsJSON(-
 });
 </script>
 
-<div class="row" id="bloggList"></div>
+<div id="bloggList"></div>
 <div class="row pagination-hdc">
     <div class="col-xs-6 col-sm-5">
         <button id="resultPrevBlogg" class="btn btn-default pull-right"><span class="glyphicon glyphicon-arrow-left"></span>&nbsp;@Messages("button.previous")</button>
