Changed name om modell for Blog data to BlogPost from BloggPosts.

--- a/app/views/blogg/addOrEdit.scala.html
+++ b/app/views/blogg/addOrEdit.scala.html
@@ -1,4 +1,4 @@
-@(bloggPostForm: Form[models.viewmodels.BlogPostsForm], editingBloggPosts: Option[models.BloggPosts] = None, extraValues: models.viewmodels.EditBloggPostsExtraValues)(implicit flash: Flash = Flash.emptyCookie, request: RequestHeader)
+@(bloggPostForm: Form[models.viewmodels.BlogPostsForm], editingBloggPosts: Option[models.BlogPost] = None, extraValues: models.viewmodels.EditBloggPostsExtraValues)(implicit flash: Flash = Flash.emptyCookie, request: RequestHeader)
 @import helper.twitterBootstrap._
 
 @main(Messages("admin.title"), footerHtml = file.modalImages.render()){
