--- a/app/views/blogg/view.scala.html
+++ b/app/views/blogg/view.scala.html
@@ -1,4 +1,4 @@
-@(blogPost: models.BloggPosts,
+@(blogPost: models.BlogPost,
         metaData: Option[viewmodels.MetaData] = None,
         isThisMyBlogPost: Boolean = false)(implicit request: RequestHeader, flash: Flash = Flash.emptyCookie)
 
