Link to edit blog post in view detail blog post page if you are owner of blog post

--- a/app/views/blogg/view.scala.html
+++ b/app/views/blogg/view.scala.html
@@ -24,6 +24,10 @@
             <div class="col-xs-12 col-md-3 col-banner">
             @shared.banner()
             </div>
+
+            @if(isThisMyBlogPost == true) {
+                <a href="/blogg/edit/@blogPost.objectId">Ändra</a>
+            }
         </div>
     </div>
 }
