--- a/app/views/recipe/addOrEdit.scala.html
+++ b/app/views/recipe/addOrEdit.scala.html
@@ -52,7 +52,7 @@
                                     }
                                 }
                                 *@
-                                @helper.textarea(recipeForm("recipebody"), '_label -> Messages("recipe.edit.add.body"), 'class -> "richtextrecipe")
+                                @helper.textarea(recipeForm("recipebody"), '_label -> Messages("recipe.edit.add.body"), 'class -> "richtext-extra")
                                 @helper.inputHidden(recipeForm("receipeid"))
                             </fieldset>
                             <div class="form-actions">
