--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -93,7 +93,7 @@
                         @helper.textarea(EnvDataForm("aboutme"),
                             'id -> "aboutme",
                             '_showErrors -> true,
-                            'class -> "richtextrecipe",
+                            'class -> "richtext-extra",
                             '_label -> Messages("profile.create.form.aboutme"),
                             '_help -> Messages("profile.create.form.aboutme.help"),
                             '_error -> EnvDataForm.error("aboutme")
